// Copyright The HTNN Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package types.plugins.hmac_auth;

import "validate/validate.proto";

option go_package = "mosn.io/htnn/types/plugins/hmac_auth";

message Config {
  string signature_header = 1;
  string access_key_header = 2;
  string date_header = 3;
}

enum Algorithm {
  HMAC_SHA256 = 0;
  HMAC_SHA384 = 1;
  HMAC_SHA512 = 2;
}

message ConsumerConfig {
  string access_key = 1 [(validate.rules).string = {min_len: 1}];
  string secret_key = 2 [(validate.rules).string = {min_len: 1}];
  // default to HMAC_SHA256
  Algorithm algorithm = 3;
  repeated string signed_headers = 4 [(validate.rules).repeated .items.string.min_len = 1];
}
